# DataScience-Docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: Hello-Pandas.ipynb  my-notebook.ipynb
tests/: test_hello_world.py
