                [tool.poetry]
name = "dev-container"
version = "0.1.0"
description = "Ambiente para desarrollar proyectos de Ciencia de Datos"
authors = ["Kuautli <cuauhtemocbe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
pandas = "^2.2.1"
ipykernel = "^6.29.4"
scikit-learn = "^1.4.2"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
jupyterlab = "^4.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    ".", "src"
]
testpaths = [
    "tests"
]
